--- a/amg-reader/package.json
+++ b/amg-reader/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
+    "angular2-markdown": "^1.6.0",
     "cordova-plugin-advanced-http": "^1.6.2",
     "ionic-angular": "3.7.1",
     "ionicons": "3.0.0",
