--- a/amg-reader/package.json
+++ b/amg-reader/package.json
@@ -22,16 +22,27 @@
     "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/http": "^4.3.2",
+    "@ionic-native/social-sharing": "^4.3.2",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angular2-markdown": "^1.6.0",
     "cordova-plugin-advanced-http": "^1.6.2",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
+    "cordova-plugin-x-socialsharing": "^5.2.1",
+    "es6-promise-plugin": "^4.1.0",
     "ionic-angular": "3.7.1",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-ios": "~4.5.3"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -40,7 +51,16 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {}
-    }
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-x-socialsharing": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
