--- a/amg-reader/package.json
+++ b/amg-reader/package.json
@@ -22,11 +22,12 @@
     "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/core": "4.3.0",
     "@ionic-native/http": "^4.3.2",
-    "@ionic-native/social-sharing": "^4.3.2",
+    "@ionic-native/social-sharing": "^4.3.3",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angular2-markdown": "^1.6.0",
+    "cordova-ios": "~4.5.3",
     "cordova-plugin-advanced-http": "^1.6.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
@@ -41,8 +42,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-ios": "~4.5.3"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
