--- a/amg-reader/package.json
+++ b/amg-reader/package.json
@@ -21,18 +21,25 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/core": "4.3.0",
+    "@ionic-native/document-viewer": "^4.4.0",
+    "@ionic-native/file": "^4.4.0",
+    "@ionic-native/file-transfer": "^4.4.0",
     "@ionic-native/http": "^4.3.2",
     "@ionic-native/social-sharing": "^4.3.3",
+    "@ionic-native/spinner-dialog": "^4.4.0",
     "@ionic-native/splash-screen": "4.3.0",
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angular2-markdown": "^1.6.0",
+    "cordova-android": "~6.3.0",
     "cordova-ios": "~4.5.3",
-    "cordova-plugin-advanced-http": "^1.6.2",
-    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-advanced-http": "^1.8.1",
     "cordova-plugin-device": "^1.1.4",
-    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-document-viewer": "~0.9.7",
+    "cordova-plugin-file": "^5.0.0",
+    "cordova-plugin-file-transfer": "^1.7.0",
     "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-native-spinner": "^1.1.3",
     "cordova-plugin-splashscreen": "^4.0.3",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.2.1",
@@ -42,8 +49,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -52,17 +58,20 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-plugin-advanced-http": {},
       "cordova-plugin-x-socialsharing": {},
       "ionic-plugin-keyboard": {},
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-document-viewer": {},
+      "cordova-plugin-file-transfer": {},
+      "cordova-plugin-advanced-http": {},
+      "cordova-plugin-native-spinner": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
