--- a/amg-reader/package.json
+++ b/amg-reader/package.json
@@ -27,7 +27,8 @@
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angular2-markdown": "^1.6.0",
-    "cordova-ios": "~4.5.3",
+    "cordova-android": "~6.3.0",
+    "cordova-ios": "^4.5.3",
     "cordova-plugin-advanced-http": "^1.6.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.4",
@@ -42,8 +43,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -61,8 +61,8 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "ios",
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
