--- a/amg-reader/package.json
+++ b/amg-reader/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
     "@ionic-native/core": "4.3.0",
-    "@ionic-native/document-viewer": "^4.4.0",
+    "@ionic-native/document-viewer": "^4.4.2",
     "@ionic-native/file": "^4.4.0",
     "@ionic-native/file-transfer": "^4.4.0",
     "@ionic-native/http": "^4.3.2",
@@ -31,15 +31,18 @@
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angular2-markdown": "^1.6.0",
+    "cordova-android": "~6.3.0",
     "cordova-ios": "~4.5.3",
     "cordova-plugin-advanced-http": "^1.8.1",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-document-viewer": "~0.9.7",
     "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-transfer": "^1.7.0",
+    "cordova-plugin-inappbrowser": "^1.7.2",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-native-spinner": "^1.1.3",
     "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-statusbar": "^2.3.0",
     "cordova-plugin-whitelist": "^1.3.1",
     "cordova-plugin-x-socialsharing": "^5.2.1",
     "es6-promise-plugin": "^4.1.0",
@@ -48,8 +51,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
@@ -67,7 +69,9 @@
       "cordova-plugin-document-viewer": {},
       "cordova-plugin-file-transfer": {},
       "cordova-plugin-advanced-http": {},
-      "cordova-plugin-native-spinner": {}
+      "cordova-plugin-native-spinner": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "ios",
