--- a/amg-reader/package.json
+++ b/amg-reader/package.json
@@ -20,10 +20,9 @@
     "@angular/http": "4.4.3",
     "@angular/platform-browser": "4.4.3",
     "@angular/platform-browser-dynamic": "4.4.3",
-    "@ionic-native/core": "4.3.0",
+    "@ionic-native/core": "4.4.2",
     "@ionic-native/document-viewer": "^4.4.2",
     "@ionic-native/file": "^4.4.0",
-    "@ionic-native/file-transfer": "^4.4.0",
     "@ionic-native/http": "^4.3.2",
     "@ionic-native/social-sharing": "^4.3.3",
     "@ionic-native/spinner-dialog": "^4.4.0",
@@ -31,7 +30,6 @@
     "@ionic-native/status-bar": "4.3.0",
     "@ionic/storage": "2.0.1",
     "angular2-markdown": "^1.6.0",
-    "cordova-android": "~6.3.0",
     "cordova-ios": "~4.5.3",
     "cordova-plugin-advanced-http": "^1.8.1",
     "cordova-plugin-device": "^1.1.4",
@@ -49,7 +47,8 @@
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18"
+    "zone.js": "0.8.18",
+    "cordova-android": "~6.3.0"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.0",
